--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:iHyHt0c6SZvQBvN237xsnoWmJt7bLACmWblt1jWQtxE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://192.168.100.66:8806
+APP_URL=http://https://rhsantefes.space/
 
 
 # php artisan serve --host=192.168.100.66 --port=8806
@@ -27,9 +27,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=baserh
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u774990954_rhsantefes
+DB_USERNAME=u774990954_rhsantefes
+DB_PASSWORD=m;2SV+qcB&*R
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
